Refactor and generic classes added